# personal_task_manager

./: .gitignore  README.md  example_config.json  pyproject.toml  tasks.json
codesnippets/: Ollama-Agent.py  OllamaChatAgent.py  caldav_com.py  json_handler.py  nextcloud_client.py  transcription.py  tts.py
src/task_manager_src/: main.py
